# rsu-to-spreadsheet

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: README.md  sample-output.csv  sample-output.xlsx  sample-sale.html
src/rsu_extract/: __init__.py  __main__.py  cli.py  exporters.py  models.py  parser_html.py
tests/: test_exporters.py  test_parser_html.py
